tests/errors/syn_class_var5.java
public class syn_class_var5 {
public static String ;
}